[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Scripts/Main/Clues.gd" type="Script" id=1]
[ext_resource path="res://assets/art/ui/misc/bg.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/misc/arrow.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/misc/frame.png" type="Texture" id=4]
[ext_resource path="res://assets/art/ui/misc/clue_slot.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/m3x6.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/art/ui/misc/finger.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
extra_spacing_top = -6
extra_spacing_bottom = -4
font_data = ExtResource( 6 )

[node name="Clues" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="MenuTimer" type="Timer" parent="."]
wait_time = 3.2
one_shot = true

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="V" type="VBoxContainer" parent="M"]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
custom_constants/separation = 0

[node name="H1" type="HBoxContainer" parent="M/V"]
margin_right = 64.0
margin_bottom = 8.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 1

[node name="Name" type="Label" parent="M/V/H1"]
margin_right = 64.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 0
text = "Timbermannn"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="H2" type="HBoxContainer" parent="M/V"]
margin_top = 8.0
margin_right = 64.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 1
alignment = 1

[node name="V1" type="VBoxContainer" parent="M/V/H2"]
margin_left = 6.0
margin_right = 6.0
margin_bottom = 42.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 1

[node name="Clue1" type="TextureRect" parent="M/V/H2/V1"]
self_modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 3
stretch_mode = 4

[node name="Clue2" type="TextureRect" parent="M/V/H2/V1"]
self_modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_top = 14.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 3
stretch_mode = 4

[node name="Clue3" type="TextureRect" parent="M/V/H2/V1"]
self_modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_top = 28.0
margin_bottom = 42.0
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 3
stretch_mode = 4

[node name="Frame" type="TextureRect" parent="M/V/H2"]
margin_left = 7.0
margin_right = 49.0
margin_bottom = 42.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Person" type="TextureRect" parent="M/V/H2/Frame"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="V2" type="VBoxContainer" parent="M/V/H2"]
margin_left = 50.0
margin_right = 58.0
margin_bottom = 42.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 1

[node name="Clue4" type="TextureRect" parent="M/V/H2/V2"]
self_modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_right = 8.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 3
stretch_mode = 4

[node name="Clue5" type="TextureRect" parent="M/V/H2/V2"]
self_modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_top = 14.0
margin_right = 8.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 3
stretch_mode = 4

[node name="Finger" type="TextureRect" parent="M/V/H2/V2"]
self_modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
margin_top = 28.0
margin_right = 8.0
margin_bottom = 42.0
mouse_filter = 0
size_flags_horizontal = 5
size_flags_vertical = 3
texture = ExtResource( 7 )
stretch_mode = 4

[node name="H3" type="HBoxContainer" parent="M/V"]
margin_top = 50.0
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
custom_constants/separation = 2
alignment = 1

[node name="LeftArrow" type="TextureRect" parent="M/V/H3"]
self_modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
margin_left = 3.0
margin_right = 11.0
margin_bottom = 14.0
mouse_filter = 0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Slot1" type="TextureRect" parent="M/V/H3"]
margin_left = 13.0
margin_right = 24.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Clue" type="TextureRect" parent="M/V/H3/Slot1"]
self_modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Positivity" type="TextureRect" parent="M/V/H3/Slot1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot2" type="TextureRect" parent="M/V/H3"]
margin_left = 26.0
margin_right = 37.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Clue" type="TextureRect" parent="M/V/H3/Slot2"]
self_modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Positivity" type="TextureRect" parent="M/V/H3/Slot2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Slot3" type="TextureRect" parent="M/V/H3"]
margin_left = 39.0
margin_right = 50.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Clue" type="TextureRect" parent="M/V/H3/Slot3"]
self_modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Positivity" type="TextureRect" parent="M/V/H3/Slot3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RightArrow" type="TextureRect" parent="M/V/H3"]
self_modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
margin_left = 52.0
margin_right = 60.0
margin_bottom = 14.0
mouse_filter = 0
texture = ExtResource( 3 )
stretch_mode = 4
flip_h = true

[connection signal="gui_input" from="M/V/H2/V2/Finger" to="." method="_on_Finger_gui_input"]
[connection signal="mouse_entered" from="M/V/H2/V2/Finger" to="." method="_on_Finger_mouse_entered"]
[connection signal="mouse_exited" from="M/V/H2/V2/Finger" to="." method="_on_Finger_mouse_exited"]
[connection signal="gui_input" from="M/V/H3/LeftArrow" to="." method="_on_LeftArrow_gui_input"]
[connection signal="mouse_entered" from="M/V/H3/LeftArrow" to="." method="_on_LeftArrow_mouse_entered"]
[connection signal="mouse_exited" from="M/V/H3/LeftArrow" to="." method="_on_LeftArrow_mouse_exited"]
[connection signal="gui_input" from="M/V/H3/RightArrow" to="." method="_on_RightArrow_gui_input"]
[connection signal="mouse_entered" from="M/V/H3/RightArrow" to="." method="_on_RightArrow_mouse_entered"]
[connection signal="mouse_exited" from="M/V/H3/RightArrow" to="." method="_on_RightArrow_mouse_exited"]
